--- a/index.html
+++ b/index.html
@@ -23,30 +23,12 @@
 
     
 
-    <div class="radio-buttons">
-      <label class="radio-button">
-        <input type="radio" name="option" value="option1">
-        <div class="radio-circle"></div>
-        <span class="radio-label">+</span>
-      </label>
-      <label class="radio-button">
-        <input type="radio" name="option" value="option2">
-        <div class="radio-circle"></div>
-        <span class="radio-label">-</span>
-      </label>
-      <label class="radio-button">
-        <input type="radio" name="option" value="option3">
-        <div class="radio-circle"></div>
-        <span class="radio-label">*</span>
-      </label>
-    </div>
-    <div class="radio-buttons">
-      <label class="radio-button">
-        <input type="radio" name="option" value="option1">
-        <div class="radio-circle"></div>
-        <span class="radio-label">/</span>
-      </label>
-
+    <select id="operation" name="operation">
+            <option >+</option>
+            <option >-</option>
+            <option >x</option>
+            <option >:</option>
+        </select>
 
     <div class="form-control">
       <input
